# teinoubot

./: .gitignore  README.md  main.py  pyproject.toml  teinou.py
assets/teinoubot_texts/: chinese_character_1.txt  en_hiragana.txt  japanese_list.txt  japankanji_list.txt
teinou/: __init__.py  cli.py  client.py  command.py  image.py  jplibrary.py  kanjilibrary.py  server.py
teinou/commands/: baseball.py  button.py  chinese.py  delete.py  japanese.py  nazuna.py  ping.py  president.py  randimage.py
