[tool.poetry]
name = "teinou-bot"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "teinou"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
discord-py = "^2.3.2"
pillow = "^10.2.0"
requests = "^2.31.0"
bs4 = "^0.0.2"

[tool.poetry.scripts]
start = "teinou.cli:main"
dev = "teinou.cli:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
